# Sis-mulador

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
examples/: mul16.sisa  testmem.sisamem
examples/alien/: alien.sio  alien.sisa  alien.sisamem
examples/complete/: basic_addition.sisa  first_example.sisa  non_halting.sisa  sum_of_elems.sisa
examples/mul16/: mul16.sregs
examples/mulfast/: mulfast.sisa
examples/simple/mulfast/: mulfast.sisa  mulfast_input.sio
src/: calc.rs  cli.rs  execute.rs  input.rs  lib.rs  main.rs  parsing.rs  preprocessor.rs  spec.rs
