[package]
name = "sICmulador"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.79"
console_error_panic_hook = "0.1.7"
nom = "7.1.3"
thiserror = "1.0.56"
toml = "0.8.8"
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1 # Smaller code at the cost of compile times
