[package]
name = "sICmulador"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.11", features = ["derive"], optional = true }
nom = "7.1.3"
thiserror = "2"
toml = "0.8.8"

[features]
executable = ["dep:clap"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1 # Smaller code at the cost of compile times
